<resources>
    <string name="app_name">Currency Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_title">Currency Converter</string>
    <string name="fragment_splash_continue">Continue</string>
    <string name="item_recyclerview_date">Date: %s</string>
    <string name="detail_fragment_title">Currency Converter</string>
    <string name="detail_fragment_desc">Check live rates, set rate alerts, receive notifications and more.</string>
    <string name="detail_fragment_rate">1 %s = %s sum</string>
    <string name="error">Error \n</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="fragment_profile_title">Husanboy Roziqov</string>
    <string name="fragment_profile_gmail_title">husanboyroziqov7@gmail.com</string>
    <string name="fragment_about_title">Currency converter app</string>
    <string name="fragment_about_author">Author of project: Roziqov Husanboy</string>
    <string name="fragment_about_version">Version 1.0</string>
</resources>